--- a/index.html
+++ b/index.html
@@ -1,6 +1,64 @@
 <!DOCTYPE html>
 
-<html lang="ja"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Under Construction / 制作中</title> <style> body { display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; margin: 0; font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif; background-color: #ffffff; color: #333333; line-height: 1.8; } .container { text-align: center; padding: 20px; max-width: 600px; width: 90%; } .main-text { font-size: 1.8rem; font-weight: bold; margin-bottom: 10px; } .sub-text { font-size: 1rem; color: #666666; margin-bottom: 30px; } .translate-widget { margin-top: 40px; padding: 15px; border-top: 1px solid #eeeeee; } @media (max-width: 480px) { .main-text { font-size: 1.4rem; } .sub-text { font-size: 0.9rem; } } </style> </head> <body>
+<html lang="ja"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Under Construction / 制作中</title> <style> body { display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif; background-color: #ffffff; color: #333333; line-height: 1.8; }
+
+    /* 戻るボタンのスタイル */
+    .nav-menu {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+    .back-link {
+        text-decoration: none;
+        color: #007bff;
+        font-weight: bold;
+        font-size: 1rem;
+        padding: 8px 16px;
+        border: 1px solid #007bff;
+        border-radius: 4px;
+    }
+    .back-link:hover {
+        background-color: #007bff;
+        color: #ffffff;
+    }
+
+    .container {
+        text-align: center;
+        padding: 20px;
+        max-width: 600px;
+        width: 90%;
+    }
+    .main-text {
+        font-size: 1.8rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+    }
+    .sub-text {
+        font-size: 1rem;
+        color: #666666;
+        margin-bottom: 30px;
+    }
+    .translate-widget {
+        margin-top: 40px;
+        padding-top: 20px;
+        border-top: 1px solid #eeeeee;
+    }
+
+    @media (max-width: 480px) {
+        .nav-menu {
+            position: static;
+            margin-bottom: 40px;
+        }
+        .main-text {
+            font-size: 1.4rem;
+        }
+    }
+</style>
+</head> <body>
+
+<nav class="nav-menu">
+    <a href="[https://shinorail.github.io/main/links.html](https://shinorail.github.io/main/links.html)" class="back-link">戻る / Back</a>
+</nav>
 
 <div class="container">
     <div class="main-text">
